deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  strategy:
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
      labels:
        app: backend
    spec:
      containers:
        - image: bvcardoso/apisample:eigthtry
          name: backend
          ports:
            - containerPort: 80
          volumeMounts:
          - name: secrets
            mountPath: "/app/secrets"
            readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: secret-appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
